# Movix

./: Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
src/: cards.rs  components.rs  detail_handlers.rs  detail_popup.rs  detail_sections.rs  handlers.rs  hero.rs  main.rs  media.rs  movie_player.rs  player_handlers.rs  search.rs  settings.rs  tmdb.rs  video.rs
src/streaming/: mod.rs
src/streaming/providers/: filmpalastto.rs  mod.rs
src/streaming/resolvers/: mod.rs  voe.rs
