[package]
name = "movix"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["sapphirebluet <sapphirebluet@proton.me>"]
license = "GPL-3.0"
description = "A native desktop streaming client with Netflix-style interface for browsing and playing movies and TV series"
repository = "https://github.com/sapphirebluet/Movix"
homepage = "https://github.com/sapphirebluet/Movix"
keywords = ["streaming", "movies", "tmdb", "gstreamer", "iced"]
categories = ["multimedia::video"]

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
iced_fonts = { version = "0.3", features = ["bootstrap"] }
tokio = { version = "1.48", features = ["fs", "process", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
regex = "1.12"
base64 = "0.22"
gstreamer = "0.24"
gstreamer-video = "0.24"
gstreamer-app = "0.24"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1