[package]
name = "movix"
version = "0.2.0"
edition = "2021"
build = "build.rs"
authors = ["sapphirebluet <sapphirebluet@proton.me>"]
license = "GPL-3.0"
description = "A native desktop streaming client with Netflix-style interface for browsing and playing movies and TV series"
repository = "https://github.com/sapphirebluet/Movix"
homepage = "https://github.com/sapphirebluet/Movix"
keywords = ["streaming", "movies", "tmdb", "ffmpeg", "iced"]
categories = ["multimedia::video"]

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
iced_fonts = { version = "0.3", features = ["bootstrap"] }
tokio = { version = "1.48", features = ["fs", "process", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
regex = "1.12"
base64 = "0.22"
ffmpeg-next = "8"
crossbeam-channel = "0.5"
rodio = { version = "0.21", default-features = false, features = ["symphonia-all", "playback"] }
ureq = "3"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
